# rofi-unicode

./: Cargo.toml  README.md  justfile
.github/workflows/: test.yml
gen-unicode/: Cargo.toml
gen-unicode/src/: main.rs
src/: lib.rs  unicode.rs
